--- a/Astar.html
+++ b/Astar.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@-14&display=swap" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8">
-    <title>Игорь</title>
+    <title>A start</title>
 </head>
 <header>
     <button class ="header-context">Main</button>
