CanvasTools done, my dudes. I'm also done 4 today

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@-14&display=swap" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8">
-    <title>Игорь</title>
+    <title>Main</title>
 </head>
 <header>
-    <button class ="header-context">Main</button>
-    <button class="header-context">A Start</button>
-    <button class="header-context">Ants</button>
-    <button class="header-context">Clusters</button>
-    <button class="header-context">Tree</button>
-    <button class="header-context">Genetic</button>
-    <button class="header-context">Neuro</button>
+    <a class ="header-context" id="main" href="index.html">Main</a>
+    <a class="header-context" id="AStar" href="Astar.html">A Star</a>
+    <a class="header-context" id="ants">Ants</a>
+    <a class="header-context" id="clusters">Clusters</a>
+    <a class="header-context" id="tree">Tree</a>
+    <a class="header-context" id="generic">Genetic</a>
+    <a class="header-context" id="neuro">Neuro</a>
 </header>
 <body>
 <canvas id="canvas"></canvas>
 </body>
 <footer>
-    <h1 class="footer-context">We are realy dum</h1>
+    <h1 class="footer-context"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Vanya Gay</a></h1>
 </footer>
 </html>
