--- a/Astar.html
+++ b/Astar.html
@@ -4,23 +4,34 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@-14&display=swap" rel="stylesheet">
-    <link href="styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="styles/style.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="styles/Astar.css" type="text/css"/>
     <meta charset="UTF-8">
     <title>A start</title>
 </head>
 <header>
-    <button class ="header-context">Main</button>
-    <button class="header-context">A Start</button>
-    <button class="header-context">Ants</button>
-    <button class="header-context">Clusters</button>
-    <button class="header-context">Tree</button>
-    <button class="header-context">Genetic</button>
-    <button class="header-context">Neuro</button>
+    <a class ="header-context" id="main" href="index.html">Main</a>
+    <a class="header-context" id="AStar" href="Astar.html">A Star</a>
+    <a class="header-context" id="ants">Ants</a>
+    <a class="header-context" id="clusters">Clusters</a>
+    <a class="header-context" id="tree">Tree</a>
+    <a class="header-context" id="generic">Genetic</a>
+    <a class="header-context" id="neuro">Neuro</a>
 </header>
 <body>
-<canvas id="canvas"></canvas>
+<div class="canvas-panel">
+    <canvas id="canvas" width="1000" height="1000"></canvas>
+    <div class="tool-buttons">
+        <button class="inBody-button" id="grid" onclick="d.drawGrid()">Draw grid</button>
+        <button class="inBody-button" id="wall" onclick="d.changeToWalls()">Wall</button>
+        <button class="inBody-button" id="end" onclick="d.changeToPointer()">End point</button>
+        <button class="inBody-button" id="eraser" onclick="d.changeToEmpty()">Eraser</button>
+        <button class="inBody-button" id="clear" onclick="d.clear()">Clear</button>
+    </div>
+</div>
+<script src="scripts/CanvasTools.js" defer></script>
 </body>
 <footer>
-    <h1 class="footer-context">We are realy dum</h1>
+    <h1 class="footer-context"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Vanya Gay</a></h1>
 </footer>
 </html>
