--- a/Astar.html
+++ b/Astar.html
@@ -23,15 +23,16 @@
     <canvas id="canvas" width="1000" height="1000"></canvas>
     <div class="tool-buttons">
         <button class="inBody-button" id="grid" onclick="d.drawGrid()">Draw grid</button>
-        <button class="inBody-button" id="wall" onclick="d.changeToWalls()">Wall</button>
-        <button class="inBody-button" id="end" onclick="d.changeToPointer()">End point</button>
-        <button class="inBody-button" id="eraser" onclick="d.changeToEmpty()">Eraser</button>
+        <button class="inBody-button" id="wall">Wall</button>
+        <button class="inBody-button" id="end">End point</button>
+        <button class="inBody-button" id="eraser">Eraser</button>
         <button class="inBody-button" id="clear" onclick="d.clear()">Clear</button>
     </div>
 </div>
 <script src="scripts/CanvasTools.js" defer></script>
+<script src="scripts/Astar.js" defer></script>
 </body>
 <footer>
-    <h1 class="footer-context"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Vanya Gay</a></h1>
+    <h1 class="footer-context"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Vanya Baran</a></h1>
 </footer>
 </html>
