--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 <canvas id="canvas"></canvas>
 </body>
 <footer>
-    <h1 class="footer-context"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Vanya Gay</a></h1>
+    <h1 class="footer-context"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Vanya Baran</a></h1>
 </footer>
 </html>
