Finaly done Astar (but not genLab)

--- a/Astar.html
+++ b/Astar.html
@@ -30,7 +30,7 @@
     </div>
 </div>
 <script src="scripts/CanvasTools.js" defer></script>
-<script src="scripts/Astar.js" defer></script>
+<script src="scripts/AstarScript.js" defer></script>
 </body>
 <footer>
     <h1 class="footer-context"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Vanya Baran</a></h1>
