Finaly done Astar and start Ants

--- a/Ants.html
+++ b/Ants.html
@@ -24,17 +24,11 @@
     <div class="tool-buttons-canvas">
         <canvas id="canvas" width="1000" height="1000"></canvas>
         <div class="tool-buttons">
-        <button class="inBody-button" id="lab">Labirint</button>
-        <button class="inBody-button" id="wall">Wall</button>
-        <button class="inBody-button" id="end">Target point</button>
-        <button class="inBody-button" id="eraser">Eraser</button>
-        <button class="inBody-button" id="clear">Clear</button>
-        <button class="inBody-button" id="start">Start</button>
         </div>
     </div>
 </div>
 <script src="scripts/CanvasTools.js" defer></script>
-<script src="scripts/AstarScript.js" defer></script>
+<script src="scripts/Ants.js" defer></script>
 </body>
 <footer>
     <h1 class="footer-context"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Vanya Baran</a></h1>
