--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <a class ="header-context" id="main" href="index.html">Main</a>
     <a class="header-context" id="AStar" href="Astar.html">A Star</a>
-    <a class="header-context" id="ants">Ants</a>
+    <a class="header-context" id="ants" href="Ants.html">Ants</a>
     <a class="header-context" id="clusters">Clusters</a>
     <a class="header-context" id="tree">Tree</a>
     <a class="header-context" id="generic">Genetic</a>
