--- a/Astar.html
+++ b/Astar.html
@@ -10,13 +10,13 @@
     <title>A start</title>
 </head>
 <header>
-    <a class ="header-context" id="main" href="index.html">Main</a>
+    <a class="header-context" id="main" href="index.html">Main</a>
     <a class="header-context" id="AStar" href="Astar.html">A Star</a>
     <a class="header-context" id="ants" href="Ants.html">Ants</a>
-    <a class="header-context" id="clusters">Clusters</a>
+    <a class="header-context" id="clusters" href="Claster.html">Clusters</a>
     <a class="header-context" id="tree">Tree</a>
-    <a class="header-context" id="generic">Genetic</a>
-    <a class="header-context" id="neuro">Neuro</a>
+    <a class="header-context" id="generic" href="genetic.html">Genetic</a>
+    <a class="header-context" id="neuro" href="Neuro.html">Neuro</a>
 </header>
 <body>
 <div class="canvas-panel">
