--- a/Ants.html
+++ b/Ants.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@-14&display=swap" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="styles/Astar.css" type="text/css"/>
+    <link rel="stylesheet" href="styles/Log.css" type="text/css"/>
     <meta charset="UTF-8">
     <title>A start</title>
 </head>
