--- a/Claster.html
+++ b/Claster.html
@@ -5,7 +5,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@-14&display=swap" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet" type="text/css"/>
-    <link href="styles/Neuro.css" rel="stylesheet" type="text/css"/>
     <meta charset="UTF-8">
     <title>Neuro</title>
 </head>
@@ -20,14 +19,20 @@
 </header>
 
 <body>
-<canvas id="canv" style="display: block;"></canvas>
+<div class="canvas-panel">
+    <div class="tool-buttons-canvas">
+        <canvas id="canv"></canvas>
+        <div class="tool-buttons">
+            <button onclick="c.clear()">clear</button>
+            <button onclick="c.claster(2)">2 types</button>
+            <button onclick="c.claster(3)">3 types</button>
+            <button onclick="c.claster(4)">4 types</button>
+        </div>
+    </div>
+</div>
 <script src="scripts/K-means.js"></script>
-<button class = "inBody-button" onclick="c.clear()">clear</button>
-<button class = "inBody-button" onclick="c.claster(2)">2 types</button>
-<button class = "inBody-button" onclick="c.claster(3)">3 types</button>
-<button class = "inBody-button" onclick="c.claster(4)">4 types</button>
 </body>
 <footer>
-    <h1 class="footer-context">Vanya Gay</h1>
+    <h1 class="footer-context"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Vanya Baran</a></h1>
 </footer>
 </html>
