--- a/Claster.html
+++ b/Claster.html
@@ -20,17 +20,25 @@
 </header>
 
 <body>
-<canvas id="canv" style="display: block;"></canvas>
-<button class = "inBody-button" onclick="c.clear()">clear</button>
-<button class = "inBody-button" onclick="c.claster()">Clusterize</button>
+<div class="canvas-panel">
+    <div class="tool-buttons-canvas">
+        <canvas id="canv"></canvas>
+        <div class="tool-buttons">
+            <button class = "inBody-button" onclick="c.clear()">clear</button>
+            <button class = "inBody-button" onclick="c.claster()">Clusterize</button>
+            <label for="numberOfCluster" class="inBudy-simpleContent">
+                    Number of clusters
+            </label>
+            <input type="range" id="numberOfCluster" min="2" max="10" value="2" class ="slider" step="1">
+            <span id="clusterNumDemo" class ="showRanCol"></span>
+        </div>
+    </div>
+</div>
 <div>
-    <label for="numberOfCluster"><h2>Choose number of clusters:</h2></label>
-    <input type="range" id="numberOfCluster" min="2" max="10" value="2" class ="slider" step="1">
-    <span id="clusterNumDemo" class ="showRanCol"></span>
 </div>
 <script src="scripts/K-means.js"></script>
 </body>
 <footer>
-    <h1 class="footer-context">Vanya Gay</h1>
+    <h1 class="footer-context"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Vanya Baran</a></h1>
 </footer>
 </html>
