--- a/genetic.html
+++ b/genetic.html
@@ -20,12 +20,12 @@
 </header>
 
 <body>
-<canvas id="canv" style="display: block;"></canvas>
+<canvas id="canv"></canvas>
 <script src="scripts/Genetic.js"></script>
 <button class = "inBody-button" onclick="c.clearAll()">clear</button>
 <button class = "inBody-button" onclick="c.path()">create path</button>
 </body>
 <footer>
-    <h1 class="footer-context">Vanya Gay</h1>
+    <h1 class="footer-context"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Vanya Baran</a></h1>
 </footer>
 </html>
