--- a/Neuro.html
+++ b/Neuro.html
@@ -13,7 +13,7 @@
     <a class="header-context" id="AStar" href="Astar.html">A Star</a>
     <a class="header-context" id="ants" href="Ants.html">Ants</a>
     <a class="header-context" id="clusters" href="Claster.html">Clusters</a>
-    <a class="header-context" id="tree">Tree</a>
+    <a class="header-context" id="tree" href="Tree.html">Tree</a>
     <a class="header-context" id="generic" href="genetic.html">Genetic</a>
     <a class="header-context" id="neuro" href="Neuro.html">Neuro</a>
 </header>
