--- a/Tree.html
+++ b/Tree.html
@@ -14,13 +14,56 @@
     <a class="header-context" id="AStar" href="Astar.html">A Star</a>
     <a class="header-context" id="ants" href="Ants.html">Ants</a>
     <a class="header-context" id="clusters" href="Claster.html">Clusters</a>
-    <a class="header-context" id="tree">Tree</a>
+    <a class="header-context" id="tree" href="Tree.html">Tree</a>
     <a class="header-context" id="generic" href="genetic.html">Genetic</a>
     <a class="header-context" id="neuro" href="Neuro.html">Neuro</a>
 </header>
 <body>
 <h3 class="inBudy-simpleContent">Training data:</h3>
 <input type="file" accept="text/csv" id="TrainingFile"/>
+
+<div id="treeContainer" class="inBudy-simpleContent">
+        <!--<ul>
+            <li>
+                <a href="#">Отец</a>
+                <ul>
+                    <li>
+                        <a href="#">Сын</a>
+                        <ul>
+                            <li>
+                                <a href="#">Внук</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Дочь</a>
+                        <ul>
+                            <li>
+                                <a href="#">Внучка</a>
+                            </li>
+                            <li>
+                                <a href="#">Внук</a>
+                                <ul>
+                                    <li>
+                                        <a href="#">Правнучка</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Правнук</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Правнучка</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Внучка</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>-->
+</div>
 
 <script src="scripts/Tree.js" defer></script>
 </body>
