--- a/Astar.html
+++ b/Astar.html
@@ -23,7 +23,7 @@
     <div class="log" id="log">Log panel in future</div>
     <div class="tool-buttons-canvas">
         <!--TODO: adaptive canvas size-->
-        <canvas id="canvas" width="400" height="400"></canvas>
+        <canvas id="canvas" width="1000" height="1000"></canvas>
         <div class="tool-buttons">
         <button class="inBody-button" id="lab">Labirint</button>
         <button class="inBody-button" id="wall">Wall</button>
@@ -34,6 +34,7 @@
         </div>
     </div>
 </div>
+<script src="scripts/CanvasResize.js" defer></script>
 <script src="scripts/CanvasTools.js" defer></script>
 <script src="scripts/AstarScript.js" defer></script>
 </body>
