Done adaptive canvas size

--- a/Astar.html
+++ b/Astar.html
@@ -9,6 +9,8 @@
     <meta charset="UTF-8">
     <title>A start</title>
 </head>
+
+<body>
 <header>
     <a class="header-context" id="main" href="index.html">Main</a>
     <a class="header-context" id="AStar" href="Astar.html">A Star</a>
@@ -18,8 +20,7 @@
     <a class="header-context" id="generic" href="genetic.html">Genetic</a>
     <a class="header-context" id="neuro" href="Neuro.html">Neuro</a>
 </header>
-<body>
-<div class="canvas-panel">
+<div class="canvas-panel" id="canvasPanel">
     <div class="log" id="log">Log panel in future</div>
     <div class="tool-buttons-canvas">
         <!--TODO: adaptive canvas size-->
@@ -37,8 +38,9 @@
 <script src="scripts/CanvasResize.js" defer></script>
 <script src="scripts/CanvasTools.js" defer></script>
 <script src="scripts/AstarScript.js" defer></script>
-</body>
 <footer>
     <h1 class="footer-context"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Vanya Baran</a></h1>
 </footer>
+</body>
+
 </html>
