--- a/Claster.html
+++ b/Claster.html
@@ -22,7 +22,7 @@
 <body>
 <div class="canvas-panel">
     <div class="tool-buttons-canvas">
-        <canvas id="canv"></canvas>
+        <canvas id="canvas" width="1000" height="1000"></canvas>
         <div class="tool-buttons">
             <button class = "inBody-button" onclick="c.clear()">clear</button>
             <button class = "inBody-button" onclick="c.claster()">Clusterize</button>
@@ -36,6 +36,7 @@
 </div>
 <div>
 </div>
+<script src="scripts/CanvasResize.js"></script>
 <script src="scripts/K-means.js"></script>
 </body>
 <footer>
