--- a/Neuro.html
+++ b/Neuro.html
@@ -21,7 +21,7 @@
 <body>
 <div class="canvas-panel">
     <div class="tool-buttons-canvas">
-        <canvas id="canv"></canvas>
+        <canvas id="canvas" width="1000" height="1000"></canvas>
         <div class="tool-buttons">
             <button class = "inBody-button" onclick="d.clear()">Clear</button>
             <button class = "inBody-button" onclick="d.sharp(true)">Done</button>
@@ -29,6 +29,7 @@
     </div>
 </div>
     <script src="scripts/Neuro.js"></script>
+    <script src="scripts/CanvasResize.js"></script>
 </body>
 <footer>
     <h1 class="footer-context"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Vanya Baran</a></h1>
