--- a/Ants.html
+++ b/Ants.html
@@ -23,8 +23,8 @@
     <div class="tool-buttons-canvas">
         <canvas id="canvas" height="1000" width="1000"></canvas>
         <div class="tool-buttons">
-            <button class = "inBody-button" onclick="a.clear()">Clear</button>
-            <button class = "inBody-button" onclick="a.driver()">Start</button>
+            <button class = "inBody-button" onclick="d.clear()">Clear</button>
+            <button class = "inBody-button" onclick="d.driver()">Start</button>
         </div>
     </div>
 </div>
