--- a/Claster.html
+++ b/Claster.html
@@ -24,8 +24,8 @@
     <div class="tool-buttons-canvas">
         <canvas id="canvas" width="1000" height="1000"></canvas>
         <div class="tool-buttons">
-            <button class = "inBody-button" onclick="c.clear()">clear</button>
-            <button class = "inBody-button" onclick="c.claster()">Clusterize</button>
+            <button class = "inBody-button" onclick="d.clear()">clear</button>
+            <button class = "inBody-button" onclick="d.claster()">Clusterize</button>
             <label for="numberOfCluster" class="inBudy-simpleContent">
                     Number of clusters
             </label>
