--- a/genetic.html
+++ b/genetic.html
@@ -24,8 +24,8 @@
     <div class="tool-buttons-canvas">
         <canvas id="canvas" width="1000" height="1000"></canvas>
         <div class="tool-buttons">
-            <button class = "inBody-button" onclick="c.clearAll()">clear</button>
-            <button class = "inBody-button" onclick="c.path()">create path</button>
+            <button class = "inBody-button" onclick="d.clearAll()">clear</button>
+            <button class = "inBody-button" onclick="d.path()">create path</button>
         </div>
     </div>
 </div>
